...
        addSubviews()
        setupLayout()
        
        progressView.progressTintColor = .ypBlack
        webView.navigationDelegate = self
        webView.translatesAutoresizingMaskIntoConstraints = false
        webView.accessibilityIdentifier = "UnsplashWebView"
        progressView.translatesAutoresizingMaskIntoConstraints = false
        
        estimatedProgressObservation = webView.observe(
            \.estimatedProgress,
             options: [],
             changeHandler: { [weak self] _, _ in
...
